# samlib

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  bitbucket-pipelines.yml  build-notes.md  build-samlib.py  genstubs.py  hatch_build.py  mypy.ini  pyproject.toml  setup.py
.github/workflows/: block-autosquash-commits.yaml  build-samlib.yaml  build.yaml  publish.yaml
hatch_build/: wheel.py
sam-sdk/: sscapi.h
samlib/: __init__.py  _ssc.py  _ssc.pyi  _util.py  ssc.py
samlib/modules/: _6parsolve.pyi  __init__.py  _util.pyi  annualoutput.pyi  battery.pyi  battwatts.pyi  belpe.pyi  biomass.pyi  cashloan.pyi  cb_construction_financing.pyi  cb_empirical_hce_heat_loss.pyi  cb_mspt_system_costs.pyi  dsg_flux_preprocess.pyi  equpartflip.pyi  generic_system.pyi  geothermal.pyi  geothermal_costs.pyi  hcpv.pyi  host_developer.pyi  iec61853interp.pyi  iec61853par.pyi  inv_cec_cg.pyi  iph_to_lcoefcr.pyi  ippppa.pyi  irradproc.pyi  iscc_design_point.pyi  layoutarea.pyi  lcoefcr.pyi  levpartflip.pyi  linear_fresnel_dsg_iph.pyi  poacalib.pyi  pv6parmod.pyi  pv_get_shade_loss_mpp.pyi  pvsamv1.pyi  pvsandiainv.pyi  pvwattsv1.pyi  pvwattsv1_1ts.pyi  pvwattsv1_poa.pyi  pvwattsv5.pyi  pvwattsv5_1ts.pyi  (+40 more)
